--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         These include:
         <ul>
             <li>Educating developers on code efficiency</li>
-            <li>Educate both users and developers on the consequences of AI to drive innovations that make AI more sustainable and to allow people to make better judgements on when to use AI</li>
+            <li>Educate both users and developers so that they understand the consequences of using AI and are more motivated to either use it responsibly or innovate more sustainable versions of AI models</li>
             <li>Shifting mindset from short-term profit to long-term sustainability</li>
             <li>Enforcing policies to encourage companies to be more sustainable</li>
         </ul>
