--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         These include:
         <ul>
             <li>Choosing the right hardware, which means:
-              <ul><li>Ensuring the hardware we choose has a high compute density</li><li>Picking the right chip - e.g. picking between Etched's Sohu, NVIDIA's GB200, or Cerebras's Wafer-scale chips</li></ul></li>
+              <ul><li>Ensuring the hardware we choose has a high compute density</li><li>Picking the right chip - e.g. picking between Etched's Sohu, Cerebras's Wafer-scale chips, or NVIDIA's GB200</li></ul></li>
             <li>Considering the location of the hardware</li>
         </ul>
     </div>
