--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <ul>
             <li>Reusing excess products for something - e.g. using heat for district heating</li>
             <li>Sharing compute and power</li>
-            <li>Finding alternate energy sources</li>
+            <li>Adopting alternate energy sources</li>
         </ul>
     </div>
 
