--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
         These include:
         <ul>
             <li>Optimizing AI models by quantizing, pruning, and distilling them</li>
-            <li>Take advantage of open-source tools like Hugging Face Optimum</li>
-            <li>Softwares to dynamically control the environment in data centers and dynamically relocate compute jobs</li>
+            <li>Taking advantage of open-source tools like Hugging Face Optimum</li>
+            <li>Using software to dynamically control the environment in data centers and automatically relocate compute jobs</li>
         </ul>
     </div>
 
@@ -199,7 +199,7 @@
         These include:
         <ul>
             <li>Educating developers on code efficiency</li>
-            <li>Educate both users and developers on the consequences of AI to drive innovations that make AI more sustainable and to allow people to make better judgements on when to use AI</li>
+            <li>Educating both users and developers on the consequences of AI to drive innovations that make AI more sustainable and to allow people to make better judgements on when to use AI</li>
             <li>Shifting mindset from short-term profit to long-term sustainability</li>
             <li>Enforcing policies to encourage companies to be more sustainable</li>
         </ul>
